--- a/ansible/playbooks/roles/nodejs/vars/main.yml
+++ b/ansible/playbooks/roles/nodejs/vars/main.yml
@@ -11,5 +11,5 @@ nodejs_shasum_url: "{{nodejs_base_url}}SHASUMS256.txt"
 nodejs_shasum_value: "b9d7d1d0294bce46686b13a05da6fc5b1e7743b597544aa888e8e64a9f178c81"
 nodejs_path: "/usr/local/"
 nodejs_tmp_dir: "/tmp/"
-npm_global_packages: []
+npm_global_packages: ["express"]
 
